add delimiter field

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <main>
             <label for='tag-name'>XML Tag<input id='tag-name' type='text' /></label>
             <label for='text-string'>Word List<input id='text-string' type='text' /></label>
+            <label for='delimiter'>Delimiter<input id='delimiter' type='text' /></label>
             <label for='spaces'>Spaces<input id='spaces' type='number' /></label>
             <label for='maxTags'>Max Tags per Row<input id='maxTags' type='number' /></label>
             <button type='button' onclick='runScript()'>Concatenate</button>
