--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@
         <title>Concatenator</title>
     </head>
     <body>
+        <style>
+            body {
+                width: 50%;
+                margin: 0 auto;
+                position: relative;
+            }
+
+            label {
+                display: flex;
+                width: 100%;
+                gap: 3ch;
+                padding: 5px;
+
+                & > * {
+                    flex: 1 1 40ch;
+                }
+                &[for='text-string']{
+                    font-weight: bold;
+                }
+            }
+
+
+
+            ol {
+                counter-reset: item;
+                border-radius: 15px;
+                background: lavender;
+                padding: 20px 0;
+                font-family: monospace;
+                & li {
+                    white-space: break-spaces;
+                    counter-increment: item;
+                    &::marker {
+                        content: counter(item);
+                    }
+                }
+            }
+
+            button.clear {
+                float: right;
+            }
+        </style>
         <header>
             <h1>Concatenator</h1>
         </header>
@@ -37,5 +79,74 @@
         </footer>
     </body>
 
-    <script src='main.js'></script>
+    <script>
+        const inputString = document.getElementById('text-string');
+        const tagName = document.getElementById('tag-name');
+        const rowDelimiter = document.getElementById('rowDelimiter');
+        const tagDelimiter = document.getElementById('tagDelimiter');
+        const newTagDelimiter = document.getElementById('newTagDelimiter');
+        const spaces = document.getElementById('spaces')
+        const maxTags = document.getElementById('maxTags')
+
+        const outputList = document.getElementById('output-list');
+
+
+        const runScript = function(){
+            const arrayOfArrays = inputString.value.split(rowDelimiter.value || ',');
+
+            let output = {
+                data: {keptTags: [], discardTags: []},
+                html: []
+            };
+
+            for(let arr in arrayOfArrays){
+                const splitArr = arrayOfArrays[arr].split(tagDelimiter.value || ' ');
+                const keptTags = maxTags.value > 0 ? splitArr.slice(0, maxTags.value) : splitArr;
+                const discardTags = maxTags.value > 0 ? splitArr.slice(maxTags.value + 1) : [];
+                output.data.keptTags.push(keptTags);
+                output.data.discardTags.push(discardTags);
+
+                let tag = [];
+                if(tagName.value.length > 0){
+                    tag = [
+                        '\<' + tagName.value + '>',
+                        '\</' + tagName.value + '>'
+                    ]
+                } else {
+                    tag = ['',''] 
+                }
+
+                const text =  ` `.repeat(spaces.value) + tag[0] + keptTags.join(newTagDelimiter.value ? newTagDelimiter.value : ' ') + tag[1];
+                const listItem = Object.assign(document.createElement('li'))
+
+                listItem.append(text);
+                output.html.push(listItem)
+                outputList.append(listItem);
+            }
+            console.log(output)
+        }
+
+        const clearInput = function(){
+            const inputs = document.querySelectorAll('input');
+            inputs.forEach(input=>{
+                input.value = ''
+            })
+        }
+
+        const clearOutput = function(){
+            outputList.replaceChildren();
+        }
+
+        const setPreset = function(preset){
+            if(preset == 'Krane'){
+                tagName.value = 'item';
+                rowDelimiter.value = ' ';
+                tagDelimiter.value = '-';
+                newTagDelimiter.value = ' ';
+                spaces.value = 4;
+                inputString.focus();
+            }
+
+        }
+    </script>
 </html>
